# Fastapi_get_docs

./: .env  .env-non-dev  .env.test  .test.env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  models.py  patch_pytesseract.py  pyproject.toml  pytest.ini  report.html  test_pytesseract.py  tree.py
alembic/: env.py
alembic/versions/: 1e9fc9bbb64f_autogenerated_migration.py  9330490954ac_описание_миграции.py  9f19b8eea3a8_описание_миграции.py  aa68c8a82893_initial_migration.py  c6ad43b27e7c_corutine_prefix.py
app/: main.py  models.py
src/: config.py  main.py  models.py  schemas.py  tasks.py  utils.py
tests/: check_env.py  conftest.py  test_example.py  test_main.py
