[tool.poetry]
name = "getdocs"
version = "0.1.0"
description = ""
authors = ["Aliaksey Khrystosay <stroitop214@gmail.com>"]
license = "ITM"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.30"}
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"